--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   }
 </script>
 
-<div class="min-h-screen bg-white flex flex-col" style="background-image: url(https://github.com/Sibalith/Images/blob/main/BUDDY%20MW2%20LOGO.gif?raw=true); background-size: cover; background-position: center;">
+<div class="min-h-screen bg-white flex flex-col" style="background-image: url('background'); background-size: cover; background-position: center;">
 
   <!-- Scrolling Header Bar -->
     <div class="bg-black text-white py-1 overflow-hidden">
@@ -109,7 +109,7 @@
     <a href="https://audio.jukehost.co.uk/GszEuHP7S2h8bmLQQCHV3LF17Zb4Bq5b"
        onclick="playSound(); return false;"
        class="w-64 h-64 border-2 border-transparent flex items-center justify-center hover:scale-105 transition overflow-hidden"
-       style="background-image: url(https://github.com/Sibalith/Images/blob/main/BUDDY%20MW2%20LOGO.gif?raw=true); background-size: cover;">
+       style="background-image: url(https://raw.githubusercontent.com/Sibalith/Images/refs/heads/main/BUDDY%20MW2%20LOGO.gif); background-size: cover;">
     </a>
   </div>
 
