--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </a>
 
     <!-- Tab 2 -->
-    <a href="#" class="tab-container tab-2 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
+    <a href="https://www.instagram.com/buddy.sj/" class="tab-container tab-2 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
       <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/280x80/cccccc/666666?text=TAB+2');"></div>
       <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/280x80/aaaaaa/444444?text=TAB+2+HOVER');"></div>
       <span class="text-gray-600 relative z-10">social</span>
