--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </a>
 
     <!-- Tab 1 -->
-    <a href="#" class="tab-container tab-1 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
+    <a href="https://buddy.bigcartel.com/product/mystery-item" class="tab-container tab-1 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
       <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/360x80/cccccc/666666?text=TAB+1');"></div>
       <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/360x80/aaaaaa/444444?text=TAB+1+HOVER');"></div>
       <span class="text-gray-600 relative z-10">something</span>
