--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <div class="absolute right-0 bottom-0 flex flex-col gap-4 items-end z-50"> 
 
     <!-- Tab 3 -->
-    <a href="#" class="tab-container tab-3 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
+    <a href="https://www.youtube.com/@noisec0mplaint/videos" class="tab-container tab-3 bg-gray-200 px-8 py-6 rounded-l-lg cursor-pointer overflow-hidden relative">
       <div class="tab-bg-static" style="background-image: url('https://via.placeholder.com/200x80/cccccc/666666?text=TAB+3');"></div>
       <div class="tab-bg-hover" style="background-image: url('https://via.placeholder.com/200x80/aaaaaa/444444?text=TAB+3+HOVER');"></div>
       <span class="text-gray-600 relative z-10">media</span>
